--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,11 @@ spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.connection-timeout=20000
 
 # JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 
 # Server Configuration
 server.port=${SERVER_PORT}
