implemented feature sign_up

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Server Configuration
-server.port=${SERVER_PORT}
+server.port=8081
 
 # Logging Configuration
 logging.level.org.springframework.web=DEBUG
@@ -28,6 +28,10 @@ logging.level.com.zaxxer.hikari=DEBUG
 
 # JSON Configuration
 spring.jackson.serialization.fail-on-empty-beans=false
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
 
 # Development profile - uncomment to use H2 for testing without PostgreSQL
 # spring.profiles.active=dev
