--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Server Configuration
-server.port=${SERVER_PORT}
+server.port=${SERVER_PORT:8081}
 
 # Logging Configuration
 logging.level.org.springframework.web=DEBUG
