chore: update application.properties to disable Spring Mail and add dummy JWT values for testing

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,5 +7,11 @@ spring.datasource.password=password
 # Cấu hình JPA cho H2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Cho phép Hibernate tự động tạo schema (bảng) khi test bắt đầu
-spring.jpa.hibernate.ddl-auto=create-drop
+# --- VÔ HIỆU HÓA/GIẢ LẬP CÁC DỊCH VỤ NGOẠI VI ---
+
+# Vô hiệu hóa Spring Mail
+spring.mail.host=
+
+# Cung cấp giá trị giả cho JWT
+jwt.secret=a-dummy-secret-for-testing-purpose-only-that-is-long-enough
+jwt.expiration=86400000
