chore: enhance application.properties for testing by adding H2 configuration and disabling Cloudinary

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,16 +1,25 @@
-# Cấu hình DataSource để sử dụng H2 In-Memory Database
+# ======================================================
+# CẤU HÌNH MÔI TRƯỜNG TEST
+# ======================================================
+
+# 1. Cấu hình DataSource để sử dụng H2 In-Memory Database
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 
-# Cấu hình JPA cho H2
+# 2. Cấu hình JPA cho H2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 
-# --- VÔ HIỆU HÓA/GIẢ LẬP CÁC DỊCH VỤ NGOẠI VI ---
+# 3. Vô hiệu hóa/Giả lập các dịch vụ ngoại vi
+# ---------------------------------------------------
 
 # Vô hiệu hóa Spring Mail
 spring.mail.host=
+
+# Vô hiệu hóa Cloudinary Auto-configuration
+cloudinary.enabled=false
 
 # Cung cấp giá trị giả cho JWT
 jwt.secret=a-dummy-secret-for-testing-purpose-only-that-is-long-enough
