--- a/.github/workflows/reusable-ci.yml
+++ b/.github/workflows/reusable-ci.yml
@@ -26,4 +26,4 @@ jobs:
 
       - name: Build with Maven
         # Lệnh này sẽ build và chạy cả unit test
-        run: mvn -B clean install -e
+        run: mvn -B clean install -DskipTests
