--- a/.github/workflows/reusable-cd.yml
+++ b/.github/workflows/reusable-cd.yml
@@ -28,6 +28,11 @@ on:
 jobs:
   deploy:
     runs-on: self-hosted
+
+    defaults:
+          run:
+            working-directory: /home/ubuntu/danang-culinary-atlas
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
