--- a/.github/workflows/reusable-cd.yml
+++ b/.github/workflows/reusable-cd.yml
@@ -29,15 +29,11 @@ jobs:
   deploy:
     runs-on: self-hosted
 
-    defaults:
-          run:
-            working-directory: /home/ubuntu/danang-culinary-atlas
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
         with: 
-          path: /home/ubuntu/danang-culinary-atlas
+          path: '/home/github/Danang-Culinary-Atlas'
 
       - name: Verify files in working directory
         run: |
@@ -45,6 +41,7 @@ jobs:
           echo "Working directory verified successfully."
 
       - name: Create .env file from secrets
+        working-directory: '/home/github/Danang-Culinary-Atlas'
         run: |
           echo "Creating .env file..."
           cat << EOF > .env
@@ -62,7 +59,9 @@ jobs:
           echo ".env file created successfully."
 
       - name: Stop old containers and start new ones
+        working-directory: '/home/github/Danang-Culinary-Atlas'
         run: docker-compose up --build -d
 
       - name: Clean up old docker images
+        working-directory: '/home/github/Danang-Culinary-Atlas'
         run: docker image prune -f
