--- a/.github/workflows/reusable-cd.yml
+++ b/.github/workflows/reusable-cd.yml
@@ -32,16 +32,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        with: 
-          path: '/home/github/Danang-Culinary-Atlas'
-
-      - name: Verify files in working directory
-        run: |
-          ls -la
-          echo "Working directory verified successfully."
 
       - name: Create .env file from secrets
-        working-directory: '/home/github/Danang-Culinary-Atlas'
+        working-directory: ${{ github.workspace }}
         run: |
           echo "Creating .env file..."
           cat << EOF > .env
@@ -59,9 +52,9 @@ jobs:
           echo ".env file created successfully."
 
       - name: Stop old containers and start new ones
-        working-directory: '/home/github/Danang-Culinary-Atlas'
+        working-directory: ${{ github.workspace }}
         run: docker-compose up --build -d
 
       - name: Clean up old docker images
-        working-directory: '/home/github/Danang-Culinary-Atlas'
+        working-directory: ${{ github.workspace }}
         run: docker image prune -f
