--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,29 +7,39 @@ services:
     container_name: culinary-atlas-app
     restart: unless-stopped
     ports:
-      # Ánh xạ port container ra bên ngoài máy chủ
       - "${SERVER_PORT}:${SERVER_PORT}"
-    # Nạp toàn bộ biến môi trường từ file .env
     env_file:
       - .env
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - culinary-network
-
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:${SERVER_PORT}/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s 
   # PostgreSQL Database Service
   db:
     image: postgres:14-alpine
     container_name: culinary-atlas-db
     restart: unless-stopped
     environment:
-      # DB_URL đã chứa tên DB nên không cần POSTGRES_DB
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: danangatlasculinarydb 
     volumes:
       - db-data:/var/lib/postgresql/data
     networks:
       - culinary-network
+    # Thêm Healthcheck cho PostgreSQL
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   db-data:
