--- a/.github/workflows/reusable-ci-build.yml
+++ b/.github/workflows/reusable-ci-build.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Build with Maven
         run: mvn -B clean install -DskipTests
 
+      - name: Inspect application.properties in JAR
+        run: unzip -p target/*.jar BOOT-INF/classes/application.properties
+
       - name: Upload JAR Artifact
         uses: actions/upload-artifact@v4
         with:
