chore: add confirmation and deployment jobs to CI/CD workflow for master branch

--- a/.github/workflows/main-trigger.yml
+++ b/.github/workflows/main-trigger.yml
@@ -11,12 +11,14 @@ jobs:
   build:
     uses: givoxxs/Danang-Culinary-Atlas/.github/workflows/reusable-ci-build.yml@ci-cd-workflows
 
+  # Job 2: Confirm deployment
   confirm:
     needs: build
     if: github.ref == 'refs/heads/master'
     uses: givoxxs/Danang-Culinary-Atlas/.github/workflows/reusable-confirm.yml@ci-cd-workflows
     secrets: inherit
 
+  # Job 3: Deploy application
   deploy:
     needs: confirm
     if: github.ref == 'refs/heads/master'
