--- a/.github/workflows/reusable-cd-deploy.yml
+++ b/.github/workflows/reusable-cd-deploy.yml
@@ -57,6 +57,13 @@ jobs:
         working-directory: ${{ github.workspace }}
         run: cat .env
 
+      - name: Stop and remove old containers and networks
+        working-directory: ${{ github.workspace }}
+        run: docker-compose down || true
+
+      - name: Clean up unused Docker images
+        run: docker image prune -a -f
+
       - name: Deploy with Docker Compose
         working-directory: ${{ github.workspace }}
         run: docker-compose up --build -d
