--- a/.github/workflows/reusable-ci-build.yml
+++ b/.github/workflows/reusable-ci-build.yml
@@ -17,10 +17,12 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
-        run: mvn -B clean install -DskipTests
-
+        run: mvn -B -U clean install -DskipTests
+      
       - name: Inspect application.properties in JAR
-        run: unzip -p target/*.jar BOOT-INF/classes/application.properties
+        run: |
+          echo "--- Displaying contents of application.properties inside the final JAR for debugging ---"
+          unzip -p target/*.jar BOOT-INF/classes/application.properties
 
       - name: Upload JAR Artifact
         uses: actions/upload-artifact@v4
